grammar.txt
GRAMMAR:


|------------------------------------------------- Comment ---------------------------------------------|

C -> ;Comment
Comment -> cmnt | ^
|------------------------------------------- Arithematic Expressions -----------------------------------|

E -> RE'
E' -> +RE' | -RE' | ^
R -> TR'
R' -> *TR' | /TR' | %TR' | ^
T -> id|num|(E)

-
|-------------------------------------------- Function Declaration -------------------------------------|

F -> kaam Func@FuncType (P) karo Stmts kaam khatam
Func -> markazi | ID
FuncType -> adad | khali

-
|-------------------------------------- Function Paramters while declaration. -----------------------------------|

P -> ID@DataType A | ^
A -> | ID@DataType A | ^

|-------------------------------------------------DataTypes ---------------------------------------------|

DataType -> adad

|------------------------------------- Variable Declaration / Initialization ---------------------------|

V -> rakho ID@DataType B; Comment
B -> ASSIGN O | ^
O -> E | FC
Comment -> cmnt | ^


K -> ID B; Comment
 


-
|--------------------------------------------- Function Call ---------------------------------------------|

FC -> chalao ID(Z);Comment
Z -> E U | ^
U -> | E U  | ^

-
|--------------------------------------------- Print  ---------------------------------------------|

print -> dekhao << G H ;Comment
H -> << G H | ^
G -> str | E

-
|--------------------------------------------- Input ---------------------------------------------|


input -> lo H >> Var I;Comment
I -> >> Var I | ^
Var  -> ID J
J -> @DataType | ^

|--------------------------------------------- Conditionals  ---------------------------------------------|

Conditional -> agar (E RO E) to phir karo Stmts ElseIf Else bas karo
ElseIf -> warna agar (E RO E) to phir Stmts ElseIf | ^
Else -> warna phir Stmts | ^


|--------------------------------------------- While Loop  ---------------------------------------------|

while -> jab tak (E RO E) karo Stmts bas karo


|--------------------------------------------- Statements  ---------------------------------------------|
Stmts -> Stmt Stmts | ^
Stmt -> C  | V | FC | print | input | Conditional | while

|--------------------------------------------- Starting Point  ---------------------------------------------|
Start -> F Start | ^



| The thing like x = 2
| The thing like cin >> var >> var2;
| in lexer change the thing that in default case , add the word to the lexer as an error.


Regular Expressions used in GRAMMAR
